--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -6,6 +6,7 @@
 	"main": "index.js",
 	"scripts": {
 		"docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
+		"docker:build:debug": "npm run build:debug && docker build . -t $npm_package_name:$npm_package_version",
 		"docker:run": "docker run  --env-file ../../config/staging/docker-staging.env  -p 3010:3010  -it $npm_package_name:$npm_package_version",
 		"prebuild": "npm run build:clean",
 		"build:clean": "rimraf dist",
