--- a/package.json
+++ b/package.json
@@ -263,6 +263,7 @@
     "immutability-helper": "^2.6.6",
     "inversify": "^4.11.1",
     "isomorphic-fetch": "^2.2.1",
+    "js-cookie": "^2.2.0",
     "knex": "^0.14.4",
     "nats": "^0.8.4",
     "nats-hemera": "^3.5.1",
@@ -270,6 +271,7 @@
     "node-pre-gyp": "^0.9.0",
     "persistgraphql": "^0.3.11",
     "prop-types": "^15.6.0",
+    "ramda": "^0.25.0",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
