added missing react-resizable package

--- a/package.json
+++ b/package.json
@@ -280,6 +280,7 @@
     "react-hot-loader": "^4.0.1",
     "react-redux": "^5.0.7",
     "react-redux-typescript": "^2.3.0",
+    "react-resizable": "^1.7.5",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
