--- a/package.json
+++ b/package.json
@@ -116,8 +116,8 @@
     "eslint": "^4.17.0",
     "eslint-plugin-graphql": "^1.5.0",
     "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "freeport-async": "^1.1.1",
     "fs-extra": "^4.0.2",
     "graphql-code-generator": "^0.8.21",
@@ -138,24 +138,25 @@
     "json-loader": "^0.5.7",
     "lerna": "2.9.0",
     "lint-staged": "^6.1.0",
-    "lodash": "^4.17.4",
-    "mime": "^2.2.0",
+    "lodash": "^4.17.10",
+    "mime": "^2.3.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "minilog": "^3.1.0",
     "mkdirp": "^0.5.1",
-    "mocha": "^4.0.1",
+    "mocha": "^5.0.0",
     "mocha-steps": "^1.1.0",
-    "mocha-webpack": "^0.7.0",
+    "mocha-webpack": "^1.1.0",
     "module": "^1.2.5",
-    "morgan": "^1.8.1",
-    "nock": "^9.1.6",
+    "morgan": "^1.9.0",
+    "nock": "^9.2.5",
     "node-dev": "^3.1.3",
-    "node-sass": "^4.7.2",
-    "nodemon": "^1.14.12",
+    "node-sass": "^4.9.0",
+    "nodemon": "^1.17.4",
     "openurl": "^1.1.1",
     "persistgraphql-webpack-plugin": "^0.5.1",
-    "postcss-loader": "^2.1.0",
-    "prettier": "^1.10.2",
-    "qrcode-terminal": "^0.11.0",
+    "postcss-loader": "^2.1.5",
+    "prettier": "^1.12.1",
+    "qrcode-terminal": "^0.12.0",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.2.0",
@@ -163,43 +164,42 @@
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-devtools-log-monitor": "^1.4.0",
-    "redux-mock-store": "^1.2.3",
-    "remap-istanbul": "^0.9.5",
-    "resolve-url-loader": "^2.2.1",
+    "redux-mock-store": "^1.5.1",
+    "remap-istanbul": "^0.11.1",
+    "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.6",
-    "shelljs": "^0.7.8",
-    "sinon": "^4.2.2",
+    "sass-loader": "^7.0.0",
+    "shelljs": "^0.8.1",
+    "sinon": "^5.0.4",
     "sinon-as-promised": "^4.0.3",
     "source-list-map": "^2.0.0",
-    "source-map-loader": "^0.2.1",
-    "source-map-support": "^0.5.0",
-    "spinjs": "0.4.116",
+    "source-map-loader": "^0.2.3",
+    "source-map-support": "^0.5.5",
+    "spinjs": "0.4.126",
     "standard-version": "^4.0.0",
     "style-loader": "^0.20.1",
     "tcomb": "^3.2.24",
-    "ts-jest": "^22.0.3",
-    "ts-loader": "^3.5.0",
-    "ts-node": "^4.1.0",
+    "ts-jest": "^22.4.5",
+    "ts-loader": "^4.2.0",
+    "ts-node": "^6.0.0",
     "tslint": "^5.0.0",
-    "tslint-loader": "^3.5.3",
+    "tslint-loader": "^3.6.0",
     "tslint-react": "^3.0.0",
-    "typescript": "2.7.1",
-    "typescript-require": "^0.2.9-1",
+    "typescript": "2.8.3",
     "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1",
-    "wait-on": "^2.0.2",
-    "webpack": "^3.11.0",
-    "webpack-dev-middleware": "^2.0.4",
-    "webpack-dev-server": "^2.11.2",
+    "wait-on": "^2.1.0",
+    "webpack": "^4.7.0",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-server": "^3.1.4",
     "webpack-fail-plugin": "^2.0.0",
     "webpack-hot-middleware": "^2.21.0",
-    "webpack-manifest-plugin": "^1.3.2",
-    "webpack-merge": "^4.1.1",
-    "webpack-node-externals": "^1.6.0",
+    "webpack-manifest-plugin": "^2.0.2",
+    "webpack-merge": "^4.1.2",
+    "webpack-node-externals": "^1.7.2",
     "webpack-sources": "^1.1.0",
-    "webpack-virtual-modules": "^0.1.8",
+    "webpack-virtual-modules": "^0.1.10",
     "webpack-visualizer-plugin": "^0.1.11",
     "ws": "^3.3.3"
   },
