--- a/packages-modules/counter/tsconfig.json
+++ b/packages-modules/counter/tsconfig.json
@@ -4,8 +4,8 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "rootDir": "./src",
-    "outDir": "./lib",
-    "declarationDir": "./lib",
+    "outDir": "../lib",
+    "declarationDir": "../lib",
     "typeRoots": [
       "../../node_modules/@types"
     ],
