fixes for webpack 4 version

--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -6,15 +6,15 @@
 	"main": "index.js",
 	"scripts": {
 		"docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
-		"docker:run": "docker run  --env-file ../../config/staging/docker-staging.env  -p 3010:3010  -it $npm_package_name:$npm_package_version",
+		"docker:run": "docker run  --env-file ../../config/test/docker-test.env  -p 3010:3010  -it $npm_package_name:$npm_package_version",
 		"prebuild": "npm run build:clean",
 		"build:clean": "rimraf dist",
 		"build": "cross-env NODE_ENV=production spin build",
 		"start": "node --harmony dist",
-		"start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env node --harmony dist",
-		"watch": "spin watch",
+		"start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env node --harmony dist",
+		"watch": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env spin watch",
 		"watch:debug": "npm run watch -- -v",
-		"watch:staging": "cross-env ENV_FILE=../../config/staging/staging.env spin watch",
+		"watch:test": "cross-env ENV_FILE=../../config/test/test.env spin watch",
 		"jest": "./node_modules/.bin/jest",
 		"test": "jest",
 		"test:debug": "npm test -- --runInBand",
@@ -77,7 +77,7 @@
 		"immutability-helper": "^2.6.6",
 		"isomorphic-fetch": "^2.2.1",
 		"js-cookie": "^2.2.0",
-		"lodash": "^4.17.4",
+		"lodash": "^4.17.10",
 		"persistgraphql": "^0.3.11",
 		"ramda": "^0.25.0",
 		"react": "^16.2.0",
