--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sample-stack",
   "private": true,
-  "version": "0.3.0",
+  "version": "0.3.2",
   "scripts": {
     "jest": "./node_modules/.bin/jest",
     "compile": "lerna exec -- npm run compile",
@@ -14,7 +14,7 @@
     "install": "npm run lerna",
     "clean": "lerna clean",
     "start": "npm run spin:watch",
-    "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env spin watch",
+    "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env spin watch",
     "spin:build": "cross-env NODE_ENV=production spin build",
     "spin:watch": "cross-env ENV_FILE=config/development/dev.env spin watch",
     "spin:watch:debug": "npm run spin:watch -- -v",
@@ -85,7 +85,7 @@
     "@types/react-addons-test-utils": "^0.14.18",
     "@types/react-dom": "^16.0.3",
     "@types/react-helmet": "^5.0.3",
-    "@types/react-hot-loader": "^3.0.6",
+    "@types/react-hot-loader": "^4.1.0",
     "@types/react-redux": "^5.0.8",
     "@types/recompose": "^0.24.1",
     "@types/semver": "^5.5.0",
@@ -96,7 +96,7 @@
     "apollo-codegen": "^0.19.0",
     "apollo-test-utils": "^0.3.2",
     "autoprefixer": "^7.2.5",
-    "awesome-typescript-loader": "^3.4.1",
+    "awesome-typescript-loader": "^5.0.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
@@ -105,16 +105,17 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.0",
-    "caporal": "^0.9.0",
+    "caporal": "^0.10.0",
     "concurrently": "^3.5.0",
     "connect": "^3.6.5",
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.11",
+    "dotenv-webpack": "^1.5.5",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.17.0",
-    "eslint-plugin-graphql": "^1.5.0",
+    "eslint-plugin-graphql": "^2.1.1",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
@@ -123,9 +124,9 @@
     "graphql-code-generator": "^0.8.21",
     "haul": "1.0.0-beta.13",
     "hemera-testsuite": "^2.0.5",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "http-proxy-middleware": "^0.17.4",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.18.0",
     "husky": "^0.14.3",
     "ignore-loader": "^0.1.2",
     "image-size": "^0.6.1",
@@ -136,7 +137,7 @@
     "jest-cli": "^22.4.2",
     "jsdom": "^11.6.0",
     "json-loader": "^0.5.7",
-    "lerna": "2.9.0",
+    "lerna": "2.11.0",
     "lint-staged": "^6.1.0",
     "lodash": "^4.17.10",
     "mime": "^2.3.0",
@@ -177,7 +178,7 @@
     "source-map-support": "^0.5.5",
     "spinjs": "0.4.126",
     "standard-version": "^4.0.0",
-    "style-loader": "^0.20.1",
+    "style-loader": "^0.21.0",
     "tcomb": "^3.2.24",
     "ts-jest": "^22.4.5",
     "ts-loader": "^4.2.0",
@@ -190,6 +191,7 @@
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1",
     "wait-on": "^2.1.0",
+    "webpack-cli": "^2.1.3",
     "webpack": "^4.7.0",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.4",
@@ -277,7 +279,7 @@
     "react-dom": "^16.2.0",
     "react-fela": "6.2.4",
     "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.0.1",
+    "react-hot-loader": "^4.1.2",
     "react-redux": "^5.0.7",
     "react-redux-typescript": "^2.3.0",
     "react-resizable": "^1.7.5",
