--- a/packages-modules/counter/package.json
+++ b/packages-modules/counter/package.json
@@ -48,9 +48,7 @@
   },
   "dependencies": {
     "graphql-iso-date": "^3.5.0",
-    "graphql-tag": "^2.8.0",
-    "path": "^0.12.7",
-    "webpack-node-externals": "^1.6.0"
+    "graphql-tag": "^2.8.0"
   },
   "peerDependencies": {},
   "typings": "lib/index.d.ts",
