--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -9,22 +9,22 @@
 		"build:clean": "rimraf dist",
 		"build": "cross-env NODE_ENV=production spin build",
 		"start": "node --harmony dist",
-		"start:staging": "cross-env ENV_FILE=../../config/staging/staging.env node --harmony dist",
+		"start:test": "cross-env ENV_FILE=../../config/test/test.env node --harmony dist",
 		"watch": "spin watch",
-		"watch:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env spin watch",
+		"watch:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env spin watch",
 		"test": "jest",
 		"test:watch": "npm test -- --watch",
 		"test:notify": "npm run test:watch -- --notify",
 		"docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
-		"docker:run": "docker run  --env-file ../../config/staging/docker-staging.env -p 8080:8080 -it $npm_package_name:$npm_package_version",
+		"docker:run": "docker run  --env-file ../../config/test/docker-test.env -p 8080:8080 -it $npm_package_name:$npm_package_version",
 		"preupver": "npm test",
 		"upver": "standard-version",
 		"db:migrate": "knex -- migrate:latest --cwd . --knexfile ./knexfile.js",
 		"db:migrate:rollback": "knex -- migrate:rollback  --cwd . --knexfile ./knexfile.js",
 		"db:seed": "npm run db:migrate && knex -- seed:run  --cwd . --knexfile ./knexfile.js",
-		"stagedb:migrate": "cross-env ENV_FILE=../../config/staging/staging.env NODE_ENV=staging npm run db:migrate",
-		"stagedb:migrate:rollback": "cross-env ENV_FILE=../../config/staging/staging.env NODE_ENV=staging npm run db:migrate:rollback",
-		"stagedb:seed": "cross-env ENV_FILE=../../config/staging/staging.env NODE_ENV=staging npm run db:seed",
+		"stagedb:migrate": "cross-env ENV_FILE=../../config/test/test.env NODE_ENV=test npm run db:migrate",
+		"stagedb:migrate:rollback": "cross-env ENV_FILE=../../config/test/test.env NODE_ENV=test npm run db:migrate:rollback",
+		"stagedb:seed": "cross-env ENV_FILE=../../config/test/test.env NODE_ENV=test npm run db:seed",
 		"proddb:migrate": "NODE_ENV=production npm run db:migrate",
 		"proddb:migrate:rollback": "NODE_ENV=production npm run db:migrate:rollback",
 		"proddb:seed": "NODE_ENV=production npm run db:seed"
@@ -74,8 +74,8 @@
 		"inversify": "^4.11.1",
 		"isomorphic-fetch": "^2.2.1",
 		"knex": "^0.14.4",
-		"lodash": "^4.17.4",
-		"morgan": "^1.8.1",
+		"lodash": "^4.17.10",
+		"morgan": "^1.9.0",
 		"mysql": "^2.15.0",
 		"nats": "^0.8.4",
 		"nats-hemera": "^3.5.1",
@@ -98,8 +98,8 @@
 	"devDependencies": {
 		"cross-env": "^5.1.3",
 		"spinjs": "0.4.126",
-		"ts-node": "^4.1.0",
-		"typescript": "2.7.1",
+		"ts-node": "^6.0.0",
+		"typescript": "2.8.3",
 		"jest": "^22.4.2",
 		"rimraf": "^2.6.1",
 		"webpack": "^4.7.0"
