--- a/servers/hemera-server/package.json
+++ b/servers/hemera-server/package.json
@@ -7,10 +7,10 @@
     "scripts": {
         "watch": "npm run start:dev",
         "start": "node dist/index.js",
-        "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env nodemon dist",
+        "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env nodemon dist",
         "start:dev": "cross-env ENV_FILE=../../config/development/dev.env nodemon dist",
         "docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
-        "docker:run": "docker run -it --env-file ../../config/staging/docker-staging.env  $npm_package_name:$npm_package_version",
+        "docker:run": "docker run -it --env-file ../../config/test/docker-test.env  $npm_package_name:$npm_package_version",
         "prebuild": "npm run build:clean",
         "pretest": "npm run build",
         "build": "cross-env NODE_ENV=production npm run build:dist",
@@ -47,7 +47,7 @@
         "cross-env": "^5.1.3",
         "jest": "^22.4.2",
         "rimraf": "^2.6.1",
-        "nodemon": "^1.14.12",
+        "nodemon": "^1.17.4",
         "webpack": "^4.7.0"
     }
 }
