--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -9,8 +9,8 @@
 		"build:clean": "rimraf dist",
 		"build": "cross-env NODE_ENV=production spin build",
 		"start": "node --harmony dist",
-		"start:test": "cross-env ENV_FILE=../../config/test/test.env node --harmony dist",
-		"watch": "spin watch",
+		"start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env node --harmony dist",
+		"watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env spin watch",
 		"watch:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env spin watch",
 		"test": "jest",
 		"test:watch": "npm test -- --watch",
