--- a/package.json
+++ b/package.json
@@ -215,9 +215,9 @@
     "@common-stack/client-redux": "0.0.13",
     "@common-stack/core": "0.0.13",
     "@common-stack/server-core": "0.0.13",
-    "apollo-cache": "^1.1.6",
-    "apollo-cache-inmemory": "^1.1.11",
-    "apollo-client": "^2.2.7",
+    "apollo-cache": "^1.1.8",
+    "apollo-cache-inmemory": "^1.2.1",
+    "apollo-client": "^2.3.1",
     "apollo-engine": "^1.0.2",
     "apollo-fetch": "^0.7.0",
     "apollo-fetch-upload": "^1.2.0",
@@ -253,7 +253,7 @@
     "graphql-nats-subscriptions": "^1.1.0",
     "graphql-resolve-batch": "^1.0.2",
     "graphql-server-core": "^1.3.2",
-    "graphql-server-express": "^1.3.2",
+    "apollo-server-express": "^1.3.6",
     "graphql-subscriptions": "^0.5.8",
     "graphql-tag": "^2.8.0",
     "graphql-tools": "2.23.1",
@@ -277,7 +277,7 @@
     "prop-types": "^15.6.0",
     "ramda": "^0.25.0",
     "react": "^16.2.0",
-    "react-apollo": "^2.0.4",
+    "react-apollo": "^2.1.4",
     "react-dom": "^16.2.0",
     "react-fela": "6.2.4",
     "react-helmet": "^5.2.0",
