--- a/packages/sample-client-react/package.json
+++ b/packages/sample-client-react/package.json
@@ -48,16 +48,12 @@
   },
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "peerDependencies": {
-    "@sample-stack/core": "*",
-    "@sample-stack/client-core": "*",
-    "@sample-stack/client-redux": "*",
-    "@sample-stack/graphql-gql": "*",
-    "apollo-client": "^1.2.2",
-    "redux": ">=3.6.0",
-    "react": ">=15.0.0",
-    "react-apollo": "^1.2.0",
-    "react-dom": ">=15.0.0",
-    "react-router": "^3.0.0"
+    "apollo-client": ">=2.0.0",
+    "react": ">=16.0.0",
+    "react-apollo": ">=2.0.0",
+    "react-dom": ">=16.0.0",
+    "react-router": ">=4.0.0",
+    "redux": ">=3.6.0"
   },
   "dependencies": {
     "@sample-stack/core": "*",
