--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -68,7 +68,7 @@
 		"express": "^4.16.3",
 		"graphql": "^0.11.7",
 		"graphql-nats-subscriptions": "^1.1.0",
-		"graphql-server-express": "^1.3.2",
+		"apollo-server-express": "^1.3.6",
 		"graphql-subscriptions": "^0.5.8",
 		"graphql-tools": "2.23.1",
 		"inversify": "^4.11.1",
