--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "@types/zen-observable": "^0.5.3",
     "apollo-codegen": "^0.19.0",
     "apollo-test-utils": "^0.3.2",
-    "autoprefixer": "^7.2.5",
+    "autoprefixer": "^8.4.1",
     "awesome-typescript-loader": "^5.0.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
@@ -116,7 +116,7 @@
     "dotenv-webpack": "^1.5.5",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.17.0",
+    "eslint": "^4.19.1",
     "eslint-plugin-graphql": "^2.1.1",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -156,7 +156,7 @@
     "node-sass": "^4.9.0",
     "nodemon": "^1.17.4",
     "openurl": "^1.1.1",
-    "persistgraphql-webpack-plugin": "^0.5.1",
+    "persistgraphql-webpack-plugin": "^0.5.4",
     "postcss-loader": "^2.1.5",
     "prettier": "^1.12.1",
     "qrcode-terminal": "^0.12.0",
@@ -198,8 +198,8 @@
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.4",
     "webpack-fail-plugin": "^2.0.0",
-    "webpack-hot-middleware": "^2.21.0",
-    "webpack-manifest-plugin": "^2.0.2",
+    "webpack-hot-middleware": "^2.22.2",
+    "webpack-manifest-plugin": "^2.0.3",
     "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.7.2",
     "webpack-sources": "^1.1.0",
@@ -210,53 +210,53 @@
   "dependencies": {
     "@cdm-logger/client": "^3.1.1",
     "@cdm-logger/server": "^3.0.2",
-    "@common-stack/client-core": "0.0.13",
-    "@common-stack/client-react": "0.0.13-1",
-    "@common-stack/client-redux": "0.0.13",
-    "@common-stack/core": "0.0.13",
-    "@common-stack/server-core": "0.0.13",
-    "apollo-cache": "^1.1.8",
-    "apollo-cache-inmemory": "^1.2.1",
+    "@common-stack/client-core": "0.0.14-7",
+    "@common-stack/client-react": "0.0.14-7",
+    "@common-stack/client-redux": "0.0.14-7",
+    "@common-stack/core": "0.0.14-7",
+    "@common-stack/server-core": "0.0.14-7",
+    "apollo-cache": "^1.1.9",
+    "apollo-cache-inmemory": "^1.2.2",
     "apollo-client": "^2.3.1",
-    "apollo-engine": "^1.0.2",
+    "apollo-engine": "^1.1.1",
     "apollo-fetch": "^0.7.0",
     "apollo-fetch-upload": "^1.2.0",
-    "apollo-link": "^1.2.1",
-    "apollo-link-batch-http": "^1.2.1",
+    "apollo-link": "^1.2.2",
+    "apollo-link-batch-http": "^1.2.2",
     "apollo-link-state": "^0.4.1",
-    "apollo-link-ws": "^1.0.7",
-    "apollo-logger": "^0.1.1",
+    "apollo-link-ws": "^1.0.8",
+    "apollo-logger": "^0.3.0",
     "apollo-upload-server": "^5.0.0",
     "app-root-path": "^2.0.1",
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "browser-bunyan": "^1.3.0",
-    "bunyan": "^1.8.10",
+    "bunyan": "^1.8.12",
     "classnames": "^2.2.5",
-    "cors": "^2.8.3",
+    "cors": "^2.8.4",
     "dotenv": "^5.0.0",
     "error-stack-parser": "^2.0.1",
     "export-dir": "^0.1.2",
-    "fela": "6.1.5",
+    "fela": "6.1.8",
     "fela-beautifier": "^5.0.15",
-    "fela-dom": "7.0.6",
+    "fela-dom": "7.0.8",
     "fela-font-renderer": "^5.0.10",
     "fela-perf": "^5.0.3",
-    "fela-plugin-fallback-value": "^5.0.17",
-    "fela-plugin-logger": "^5.0.4",
+    "fela-plugin-fallback-value": "^5.0.18",
+    "fela-plugin-logger": "^5.0.5",
     "fela-plugin-lvha": "^5.0.15",
-    "fela-plugin-prefixer": "^5.0.18",
-    "fela-plugin-unit": "^5.0.16",
-    "fela-plugin-validator": "^5.1.1",
+    "fela-plugin-prefixer": "^5.0.19",
+    "fela-plugin-unit": "^5.0.17",
+    "fela-plugin-validator": "^5.2.0",
     "graphql": "^0.11.7",
-    "graphql-auth": "^0.2.0",
+    "graphql-auth": "^0.2.2",
     "graphql-iso-date": "^3.5.0",
     "graphql-nats-subscriptions": "^1.1.0",
     "graphql-resolve-batch": "^1.0.2",
-    "graphql-server-core": "^1.3.2",
+    "graphql-server-core": "^1.3.6",
     "apollo-server-express": "^1.3.6",
     "graphql-subscriptions": "^0.5.8",
-    "graphql-tag": "^2.8.0",
-    "graphql-tools": "2.23.1",
+    "graphql-tag": "^2.9.2",
+    "graphql-tools": "3.0.2",
     "helmet": "^3.12.0",
     "hemera-joi": "^3.1.0",
     "hemera-plugin": "0.1.2",
@@ -265,7 +265,7 @@
     "hemera-zipkin": "^3.1.0",
     "history": "^4.7.2",
     "immutability-helper": "^2.6.6",
-    "inversify": "^4.11.1",
+    "inversify": "^4.13.0",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.0",
     "knex": "^0.14.4",
@@ -274,32 +274,31 @@
     "nconf": "^0.10.0",
     "node-pre-gyp": "^0.9.0",
     "persistgraphql": "^0.3.11",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.1",
     "ramda": "^0.25.0",
     "react": "^16.2.0",
     "react-apollo": "^2.1.4",
-    "react-dom": "^16.2.0",
-    "react-fela": "6.2.4",
+    "react-dom": "^16.4.0",
+    "react-fela": "7.3.0",
     "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.1.2",
+    "react-hot-loader": "^4.2.0",
     "react-redux": "^5.0.7",
     "react-redux-typescript": "^2.3.0",
     "react-resizable": "^1.7.5",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
-    "react-transition-group": "^2.2.1",
-    "reactstrap": "^4.8.0",
-    "recompose": "^0.26.0",
+    "react-transition-group": "^2.3.1",
+    "recompose": "^0.27.1",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
+    "redux-thunk": "^2.3.0",
     "reflect-metadata": "^0.1.12",
     "reselect": "^3.0.1",
-    "rxjs": "^5.5.7",
-    "sequelize": "^4.32.6",
-    "serialize-javascript": "^1.4.0",
+    "rxjs": "^6.2.0",
+    "sequelize": "^4.37.10",
+    "serialize-javascript": "^1.5.0",
     "sourcemapped-stacktrace": "^1.1.8",
     "sqlite3": "^3.1.13",
-    "subscriptions-transport-ws": "^0.9.6"
+    "subscriptions-transport-ws": "^0.9.9"
   }
 }
