--- a/package.json
+++ b/package.json
@@ -223,6 +223,11 @@
     "apollo-fetch-upload": "^1.2.0",
     "apollo-link": "^1.2.2",
     "apollo-link-batch-http": "^1.2.2",
+    "apollo-link-context": "^1.0.8",
+    "apollo-link-debounce": "^2.0.0",
+    "apollo-link-error": "^1.0.9",
+    "apollo-link-http": "^1.5.4",
+    "apollo-link-retry": "^2.2.3",
     "apollo-link-state": "^0.4.1",
     "apollo-link-ws": "^1.0.8",
     "apollo-logger": "^0.3.0",
