--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -53,14 +53,20 @@
 		"apollo-cache-inmemory": "^1.2.2",
 		"apollo-client": "^2.3.1",
 		"apollo-fetch": "^0.7.0",
-		"apollo-link": "^1.2.2",
-		"apollo-link-batch-http": "^1.2.2",
-		"apollo-link-ws": "^1.0.8",
+        "apollo-link": "^1.2.2",
+        "apollo-link-batch-http": "^1.2.2",
+        "apollo-link-context": "^1.0.8",
+        "apollo-link-debounce": "^2.0.0",
+        "apollo-link-error": "^1.0.9",
+        "apollo-link-http": "^1.5.4",
+        "apollo-link-retry": "^2.2.3",
+        "apollo-link-state": "^0.4.1",
+        "apollo-link-ws": "^1.0.8",
 		"apollo-logger": "^0.3.0",
 		"browser-bunyan": "^1.3.0",
-		"bunyan": "^1.8.10",
+		"bunyan": "^1.8.12",
 		"classnames": "^2.2.5",
-		"cors": "^2.8.3",
+		"cors": "^2.8.4",
 		"dotenv": "^5.0.0",
 		"fela": "6.1.8",
 		"fela-beautifier": "^5.0.15",
