--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-plugin-graphql": "^2.1.1",
+    "envalid": "^4.1.4",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
