--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -65,6 +65,7 @@
 		"body-parser": "^1.18.3",
 		"cors": "^2.8.4",
 		"dotenv": "^5.0.0",
+		"envalid": "^4.1.4",
 		"express": "^4.16.3",
 		"graphql": "^0.11.7",
 		"graphql-nats-subscriptions": "^1.1.0",
