--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -68,6 +68,7 @@
 		"classnames": "^2.2.5",
 		"cors": "^2.8.4",
 		"dotenv": "^5.0.0",
+		"envalid": "^4.1.4",
 		"fela": "6.1.8",
 		"fela-beautifier": "^5.0.15",
 		"fela-dom": "7.0.8",
