--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -45,6 +45,11 @@
 	"dependencies": {
 		"@cdm-logger/client": "^3.1.1",
 		"@cdm-logger/server": "^3.0.2",
+		"@common-stack/client-core": "0.0.14-28",
+		"@common-stack/client-react": "0.0.14-28",
+		"@common-stack/client-redux": "0.0.14-28",
+		"@common-stack/core": "0.0.14-28",
+		"@common-stack/server-core": "0.0.14-28",
 		"@sample-stack/core": "*",
 		"@sample-stack/client-core": "*",
 		"@sample-stack/client-react": "*",
@@ -55,15 +60,15 @@
 		"apollo-cache-inmemory": "^1.2.2",
 		"apollo-client": "^2.3.1",
 		"apollo-fetch": "^0.7.0",
-        "apollo-link": "^1.2.2",
-        "apollo-link-batch-http": "^1.2.2",
-        "apollo-link-context": "^1.0.8",
-        "apollo-link-debounce": "^2.0.0",
-        "apollo-link-error": "^1.0.9",
-        "apollo-link-http": "^1.5.4",
-        "apollo-link-retry": "^2.2.3",
-        "apollo-link-state": "^0.4.1",
-        "apollo-link-ws": "^1.0.8",
+		"apollo-link": "^1.2.2",
+		"apollo-link-batch-http": "^1.2.2",
+		"apollo-link-context": "^1.0.8",
+		"apollo-link-debounce": "^2.0.0",
+		"apollo-link-error": "^1.0.9",
+		"apollo-link-http": "^1.5.4",
+		"apollo-link-retry": "^2.2.3",
+		"apollo-link-state": "^0.4.1",
+		"apollo-link-ws": "^1.0.8",
 		"apollo-logger": "^0.3.0",
 		"browser-bunyan": "^1.3.0",
 		"bunyan": "^1.8.12",
