--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@types/react-dom": "^16.0.3",
     "@types/react-helmet": "^5.0.3",
     "@types/react-hot-loader": "^4.1.0",
+    "@types/react-loadable": "^5.4.0",
     "@types/react-redux": "^5.0.8",
     "@types/recompose": "^0.24.1",
     "@types/semver": "^5.5.0",
@@ -292,6 +293,7 @@
     "react-fela": "7.3.0",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.2.0",
+    "react-loadable": "^5.4.0",
     "react-redux": "^5.0.7",
     "react-redux-typescript": "^2.3.0",
     "react-resizable": "^1.7.5",
