--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -103,7 +103,9 @@
 		"react-redux": "^5.0.7",
 		"react-redux-typescript": "^2.3.0",
 		"react-resizable": "^1.7.5",
-		"react-router-dom": "^4.2.2",
+		"react-router": "^4.3.1",
+		"react-router-config": "^1.0.0-beta.4",
+		"react-router-dom": "^4.3.1",
 		"react-router-redux": "^5.0.0-alpha.8",
 		"react-transition-group": "^2.3.1",
 		"recompose": "^0.27.1",
