--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -36,6 +36,8 @@
 	"devDependencies": {
 		"body-parser": "^1.18.3",
 		"cross-env": "^5.1.3",
+		"enzyme": "^3.3.0",
+		"enzyme-adapter-react-16": "^1.1.1",
 		"express": "^4.16.3",
 		"jest": "^22.4.2",
 		"rimraf": "^2.6.1",
