--- a/package.json
+++ b/package.json
@@ -51,9 +51,12 @@
     "moduleFileExtensions": [
       "ts",
       "tsx",
-      "js"
+      "js",
+      "gql",
+      "graphql"
     ],
     "transform": {
+      "\\.(gql|graphql)$": "jest-transform-graphql",
       "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": "/__tests__/.*test*\\.(ts|tsx|js)$"
@@ -119,11 +122,11 @@
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.11",
     "dotenv-webpack": "^1.5.5",
+    "envalid": "^4.1.4",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-plugin-graphql": "^2.1.1",
-    "envalid": "^4.1.4",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
@@ -143,6 +146,7 @@
     "istanbul": "1.0.0-alpha.2",
     "jest": "^22.4.2",
     "jest-cli": "^22.4.2",
+    "jest-transform-graphql": "^2.1.0",
     "jsdom": "^11.6.0",
     "json-loader": "^0.5.7",
     "lerna": "2.11.0",
@@ -199,8 +203,8 @@
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1",
     "wait-on": "^2.1.0",
-    "webpack-cli": "^2.1.3",
     "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.3",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.4",
     "webpack-fail-plugin": "^2.0.0",
