--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -92,6 +92,7 @@
 		"fela-plugin-validator": "^5.2.0",
 		"graphql": "^0.11.7",
 		"immutability-helper": "^2.6.6",
+		"inversify": "^4.13.0",
 		"isomorphic-fetch": "^2.2.1",
 		"js-cookie": "^2.2.0",
 		"lodash": "^4.17.10",
@@ -117,16 +118,6 @@
 		"reselect": "^3.0.1",
 		"serialize-javascript": "^1.5.0",
 		"subscriptions-transport-ws": "^0.9.9"
-	},
-	"peerDependencies": {
-		"source-map-loader": "*",
-		"apollo-client": "*",
-		"react": "*",
-		"react-apollo": "*",
-		"redux-thunk": "*",
-		"react-redux": "*",
-		"redux": "*",
-		"reselect": "*"
 	},
 	"jest": {
 		"moduleFileExtensions": [
