--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -10,8 +10,11 @@
 		"build": "cross-env NODE_ENV=production spin build",
 		"start": "node --harmony dist",
 		"start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env node --harmony dist",
+		"start:staging": "cross-env NODE_ENV=test ENV_FILE=../../config/staging/staging.env node --harmony dist",
 		"watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env spin watch",
+		"watch:debug": "npm run watch -- -v",
 		"watch:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env spin watch",
+		"watch:staging": "cross-env NODE_ENV=test ENV_FILE=../../config/staging/staging.env spin watch",
 		"test": "jest",
 		"test:watch": "npm test -- --watch",
 		"test:notify": "npm run test:watch -- --notify",
@@ -51,11 +54,11 @@
 	"homepage": "https://github.com/cdmbase/fullstack-pro#readme",
 	"dependencies": {
 		"@cdm-logger/server": "^3.0.2",
-		"@common-stack/client-core": "0.0.14-28",
-		"@common-stack/client-react": "0.0.14-28",
-		"@common-stack/client-redux": "0.0.14-28",
-		"@common-stack/core": "0.0.14-28",
-		"@common-stack/server-core": "0.0.14-28",
+		"@common-stack/client-core": "0.0.140",
+		"@common-stack/client-react": "0.0.140",
+		"@common-stack/client-redux": "0.0.140",
+		"@common-stack/core": "0.0.140",
+		"@common-stack/server-core": "0.0.140",
 		"@sample-stack/core": "*",
 		"@sample-stack/graphql-gql": "*",
 		"@sample-stack/graphql-schema": "*",
