--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
     "check-updates": "lerna exec ./node_modules/.bin/npm-check-updates -- -u"
   },
   "jest": {
+    "globals": {
+      "ts-jest": {
+        "skipBabel": true
+      }
+    },
     "testEnvironment": "node",
     "roots": [
       "packages",
@@ -220,11 +225,11 @@
   "dependencies": {
     "@cdm-logger/client": "^3.1.1",
     "@cdm-logger/server": "^3.0.2",
-    "@common-stack/client-core": "0.0.14-28",
-    "@common-stack/client-react": "0.0.14-28",
-    "@common-stack/client-redux": "0.0.14-28",
-    "@common-stack/core": "0.0.14-28",
-    "@common-stack/server-core": "0.0.14-28",
+    "@common-stack/client-core": "0.0.140",
+    "@common-stack/client-react": "0.0.140",
+    "@common-stack/client-redux": "0.0.140",
+    "@common-stack/core": "0.0.140",
+    "@common-stack/server-core": "0.0.140",
     "apollo-cache": "^1.1.9",
     "apollo-cache-inmemory": "^1.2.2",
     "apollo-client": "^2.3.1",
