--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
     "lerna:prepublish": "git checkout publish && git merge -s recursive -X theirs master",
     "lerna:prepublish:develop": "git checkout publish-develop && git merge -s recursive -X theirs develop",
-    "publish": "npm run lerna:prepublish && lerna publish --cd-version=prepatch",
+    "publish": "npm run lerna:prepublish && lerna publish --cd-version=prerelease",
     "publish:develop": "npm run lerna:prepublish:develop && lerna publish --force-publish=*",
     "postpublish": "git checkout master",
     "publish:force": "npm run publish -- --force-publish=*",
