--- a/package.json
+++ b/package.json
@@ -246,6 +246,7 @@
     "apollo-link-state": "^0.4.1",
     "apollo-link-ws": "^1.0.8",
     "apollo-logger": "^0.3.0",
+    "apollo-server-express": "^1.3.6",
     "apollo-upload-server": "^5.0.0",
     "app-root-path": "^2.0.1",
     "body-parser": "^1.18.3",
@@ -273,7 +274,6 @@
     "graphql-nats-subscriptions": "^1.1.0",
     "graphql-resolve-batch": "^1.0.2",
     "graphql-server-core": "^1.3.6",
-    "apollo-server-express": "^1.3.6",
     "graphql-subscriptions": "^0.5.8",
     "graphql-tag": "^2.9.2",
     "graphql-tools": "3.0.2",
@@ -320,6 +320,7 @@
     "serialize-javascript": "^1.5.0",
     "sourcemapped-stacktrace": "^1.1.8",
     "sqlite3": "^3.1.13",
-    "subscriptions-transport-ws": "^0.9.9"
+    "subscriptions-transport-ws": "^0.9.9",
+    "utility-types": "^2.0.0"
   }
 }
