--- a/package.json
+++ b/package.json
@@ -320,7 +320,6 @@
     "serialize-javascript": "^1.5.0",
     "sourcemapped-stacktrace": "^1.1.8",
     "sqlite3": "^3.1.13",
-    "subscriptions-transport-ws": "^0.9.9",
-    "utility-types": "^2.0.0"
+    "subscriptions-transport-ws": "^0.9.9"
   }
 }
