--- a/packages/sample-microservice-nats/package.json
+++ b/packages/sample-microservice-nats/package.json
@@ -53,5 +53,9 @@
     "jest": "^22.4.2",
     "rimraf": "^2.6.1",
     "webpack": "^4.7.0"
+  },
+  "typings": "lib/index.d.ts",
+  "typescript": {
+    "definition": "lib/index.d.ts"
   }
 }
