--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.11",
+    "dotenv-safe": "^6.0.0",
     "dotenv-webpack": "^1.5.5",
     "envalid": "^4.1.4",
     "enzyme": "^3.3.0",
