--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "compile": "lerna exec -- npm run compile",
     "lint": "tslint ./packages/**/src/**/*.ts --exclude \"./packages/**/node_modules/**/*.ts\"",
     "lerna:prepublish": "git checkout publish && git merge -s recursive -X theirs master",
-    "lerna:prepublish:develop": "git checkout publish-develop && git merge -s recursive -X theirs develop",
     "publish": "npm run lerna:prepublish && lerna publish --cd-version=patch",
-    "publish:develop": "npm run lerna:prepublish:develop && lerna publish --force-publish=*",
     "postpublish": "git checkout master",
     "publish:force": "npm run publish -- --force-publish=*",
+    "lerna:predevpublish": "git checkout prepublish && git merge -s recursive -X theirs develop",
+    "devpublish": "npm run lerna:predevpublish && lerna publish --cd-version=prerelease",
+    "postdevpublish": "git checkout develop",
+    "devpublish:force": "npm run devpublish -- --force-publish=*",
     "lerna": "lerna bootstrap --hoist",
     "postinstall": "npm run lerna",
     "clean": "lerna clean",
