--- a/package.json
+++ b/package.json
@@ -323,6 +323,7 @@
     "serialize-javascript": "^1.5.0",
     "sourcemapped-stacktrace": "^1.1.8",
     "sqlite3": "^3.1.13",
-    "subscriptions-transport-ws": "^0.9.9"
+    "subscriptions-transport-ws": "^0.9.9",
+    "universal-cookie-express": "^2.1.5"
   }
 }
