--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -117,7 +117,8 @@
 		"redux-thunk": "^2.3.0",
 		"reselect": "^3.0.1",
 		"serialize-javascript": "^1.5.0",
-		"subscriptions-transport-ws": "^0.9.9"
+		"subscriptions-transport-ws": "^0.9.9",
+		"universal-cookie-express": "^2.1.5"
 	},
 	"jest": {
 		"moduleFileExtensions": [
