--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -10,7 +10,7 @@
 		"build": "cross-env NODE_ENV=production spin build",
 		"start": "node --harmony dist",
 		"start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env node --harmony dist",
-		"start:staging": "cross-env NODE_ENV=test ENV_FILE=../../config/staging/staging.env node --harmony dist",
+		"start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env node --harmony dist",
 		"watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env spin watch",
 		"watch:debug": "npm run watch -- -v",
 		"watch:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env spin watch",
@@ -19,7 +19,7 @@
 		"test:watch": "npm test -- --watch",
 		"test:notify": "npm run test:watch -- --notify",
 		"docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
-		"docker:run": "docker run  --env-file ../../config/test/docker-test.env -p 8080:8080 -it $npm_package_name:$npm_package_version",
+		"docker:run": "docker run  --env-file ../../config/staging/docker-staging.env -p 8080:8080 -it $npm_package_name:$npm_package_version",
 		"preupver": "npm test",
 		"upver": "standard-version",
 		"db:migrate": "knex -- migrate:latest --cwd . --knexfile ./knexfile.js",
