--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -7,13 +7,14 @@
 	"scripts": {
 		"docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
 		"docker:build:debug": "npm run build:debug && docker build . -t $npm_package_name:$npm_package_version",
-		"docker:run": "docker run  --env-file ../../config/test/docker-test.env  -p 3010:3010  -it $npm_package_name:$npm_package_version",
+		"docker:run": "docker run  --env-file ../../config/staging/docker-staging.env  -p 3010:3010  -it $npm_package_name:$npm_package_version",
 		"prebuild": "npm run build:clean",
 		"build:clean": "rimraf dist",
 		"build": "cross-env NODE_ENV=production spin build",
 		"build:debug": "cross-env DEBUGGING=true NODE_ENV=production spin build",
 		"build:debug:verbose": "npm run build:debug -- -v",
 		"start": "node --harmony dist",
+		"start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env node --harmony dist",
 		"start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env node --harmony dist",
 		"watch": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env spin watch",
 		"watch:debug": "npm run watch -- -v",
