--- a/servers/hemera-server/package.json
+++ b/servers/hemera-server/package.json
@@ -8,9 +8,10 @@
         "watch": "npm run start:dev",
         "start": "node dist/index.js",
         "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env nodemon dist",
+        "start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env node --harmony dist",
         "start:dev": "cross-env ENV_FILE=../../config/development/dev.env nodemon dist",
         "docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
-        "docker:run": "docker run -it --env-file ../../config/test/docker-staging.env  $npm_package_name:$npm_package_version",
+        "docker:run": "docker run -it --env-file ../../config/staging/docker-staging.env  $npm_package_name:$npm_package_version",
         "prebuild": "npm run build:clean",
         "pretest": "npm run build",
         "build": "cross-env NODE_ENV=production npm run build:dist",
