--- a/packages-modules/sample-module/package.json
+++ b/packages-modules/sample-module/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sample-stack/counter",
+  "name": "@sample-stack/module",
   "version": "0.0.1",
   "description": "Sample core for higher packages to depend on",
   "main": "lib/index.js",
@@ -13,9 +13,7 @@
     "build": "npm run build:clean && npm run build:lib",
     "build:clean": "rimraf lib",
     "build:lib": "webpack",
-    "build:lib:watch": "npm run build:lib -- --watch",
-    "schema:download": "./node_modules/.bin/apollo-codegen download-schema http://localhost:8080/graphql --output schema.json ",
-    "schema:generate": "./node_modules/.bin/apollo-codegen generate src/browser/graphql/**/*.graphql --schema schema.json --target typescript --output src/browser/types/schema.ts"
+    "build:lib:watch": "npm run build:lib -- --watch"
   },
   "publishConfig": {
     "access": "public"
@@ -43,18 +41,23 @@
   "license": "ISC",
   "devDependencies": {
     "cross-env": "^5.1.3",
-    "jest": "^22.4.2",
     "persistgraphql-webpack-plugin": "^0.5.4",
+    "jest": "^22.4.2",
     "rimraf": "^2.6.1",
-    "webpack": "^4.7.0"
+    "webpack": "^4.7.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "@common-stack/client-react": "0.0.151",
     "@common-stack/server-core": "0.0.151",
-    "graphql-iso-date": "^3.5.0",
-    "graphql-tag": "^2.9.2"
+    "@sample-stack/client-react": "*",
+    "@sample-stack/client-redux": "*",
+    "@sample-stack/graphql-schema": "*",
+    "@sample-stack/server-core": "*",
+    "@sample-stack/microservice-nats": "*"
   },
-  "peerDependencies": {},
+  "peerDependencies": {
+    "graphql-tag": ">=2.0.0"
+  },
   "typings": "lib/index.d.ts",
   "typescript": {
     "definition": "lib/index.d.ts"
