--- a/package.json
+++ b/package.json
@@ -319,7 +319,8 @@
     "redux-thunk": "^2.3.0",
     "reflect-metadata": "^0.1.12",
     "reselect": "^3.0.1",
-    "rxjs": "^6.2.0",
+	"rxjs": "^6.2.1",
+	"rxjs-compat": "^6.2.1",
     "sequelize": "^4.37.10",
     "serialize-javascript": "^1.5.0",
     "sourcemapped-stacktrace": "^1.1.8",
