--- a/lerna.json
+++ b/lerna.json
@@ -11,7 +11,7 @@
       "tag: internal": ":house: Internal"
     }
   },
-  "commands": {
+  "command": {
     "publish": {
       "allowBranch": "publish"
     }
