--- a/lerna.json
+++ b/lerna.json
@@ -13,7 +13,7 @@
   },
   "command": {
     "publish": {
-      "allowBranch": ["publish, prepublish"]
+      "allowBranch": ["publish", "prepublish"]
     }
   },
   "packages": [
