--- a/packages-modules/sample-module/package.json
+++ b/packages-modules/sample-module/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sample-stack/module",
+  "name": "@sample-stack/sample-module",
   "version": "0.0.1",
   "description": "Sample core for higher packages to depend on",
   "main": "lib/index.js",
