--- a/package.json
+++ b/package.json
@@ -157,7 +157,7 @@
     "jest-transform-graphql": "^2.1.0",
     "jsdom": "^11.6.0",
     "json-loader": "^0.5.7",
-    "lerna": "3.0.0-beta.20",
+    "lerna": "2.11.0",
     "lint-staged": "^6.1.0",
     "lodash": "^4.17.10",
     "mime": "^2.3.0",
