--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "@types/cors": "2.8.1",
     "@types/enzyme": "^2.8.0",
     "@types/express": "^4.0.35",
-    "@types/graphql": "^0.11.8",
+    "@types/graphql": "^0.12.6",
     "@types/isomorphic-fetch": "0.0.34",
     "@types/jest": "^22.2.0",
     "@types/knex": "^0.14.5",
@@ -280,7 +280,7 @@
     "graphql-server-core": "^1.3.6",
     "graphql-subscriptions": "^0.5.8",
     "graphql-tag": "^2.9.2",
-    "graphql-tools": "3.0.2",
+    "graphql-tools": "^3.1.1",
     "helmet": "^3.12.0",
     "hemera-joi": "^3.1.0",
     "hemera-plugin": "0.1.2",
