--- a/packages/sample-utils/package.json
+++ b/packages/sample-utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sample-stack/utils",
+  "name": "@cdm-logger/server",
   "version": "0.0.1",
   "description": "Sample core for higher packages to depend on",
   "main": "lib/index.js",
