--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sample-stack",
   "private": true,
-  "version": "0.3.5",
+  "version": "0.3.6",
   "scripts": {
     "jest": "./node_modules/.bin/jest",
     "compile": "lerna exec -- npm run compile",
@@ -82,6 +82,12 @@
     "node": ">=8.9.0",
     "npm": ">=5.6.0"
   },
+  "cacheDirectories": [
+    ".cache"
+  ],
+  "workspaces": [
+    "servers/*"
+  ],
   "devDependencies": {
     "@types/async": "^2.0.40",
     "@types/body-parser": "1.16.5",
@@ -89,7 +95,7 @@
     "@types/cors": "2.8.1",
     "@types/enzyme": "^2.8.0",
     "@types/express": "^4.0.35",
-    "@types/graphql": "^0.12.6",
+    "@types/graphql": "^0.13.4",
     "@types/isomorphic-fetch": "0.0.34",
     "@types/jest": "^22.2.0",
     "@types/knex": "^0.14.5",
@@ -110,7 +116,7 @@
     "@types/webpack": "^3.8.4",
     "@types/webpack-env": "^1.13.5",
     "@types/zen-observable": "^0.5.3",
-    "apollo-codegen": "^0.19.0",
+    "apollo-codegen": "^0.20.2",
     "apollo-test-utils": "^0.3.2",
     "autoprefixer": "^8.4.1",
     "awesome-typescript-loader": "^5.0.0",
@@ -195,7 +201,7 @@
     "source-list-map": "^2.0.0",
     "source-map-loader": "^0.2.3",
     "source-map-support": "^0.5.5",
-    "spinjs": "0.4.126",
+    "spinjs": "0.4.159",
     "standard-version": "^4.0.0",
     "style-loader": "^0.21.0",
     "tcomb": "^3.2.24",
@@ -210,14 +216,14 @@
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1",
     "wait-on": "^2.1.0",
-    "webpack": "^4.7.0",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-dev-server": "^3.1.4",
+    "webpack": "^4.19.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-middleware": "^3.3.0",
+    "webpack-dev-server": "^3.1.8",
     "webpack-fail-plugin": "^2.0.0",
-    "webpack-hot-middleware": "^2.22.2",
-    "webpack-manifest-plugin": "^2.0.3",
-    "webpack-merge": "^4.1.2",
+    "webpack-hot-middleware": "^2.24.0",
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2",
     "webpack-sources": "^1.1.0",
     "webpack-virtual-modules": "^0.1.10",
@@ -271,10 +277,11 @@
     "fela-plugin-prefixer": "^5.0.19",
     "fela-plugin-unit": "^5.0.17",
     "fela-plugin-validator": "^5.2.0",
-    "graphql": "^0.12.0",
-    "graphql-auth": "^0.2.2",
+    "graphql": "^0.13.2",
+    "graphql-auth": "^0.2.0",
     "graphql-iso-date": "^3.5.0",
     "graphql-nats-subscriptions": "^1.2.0",
+    "graphql-playground-middleware-express": "^1.7.3",
     "graphql-resolve-batch": "^1.0.2",
     "graphql-subscriptions": "^0.5.8",
     "graphql-tag": "^2.9.2",
@@ -299,7 +306,7 @@
     "prop-types": "^15.6.1",
     "ramda": "^0.25.0",
     "react": "^16.4.2",
-    "react-apollo": "^2.1.8",
+    "react-apollo": "^2.1.11",
     "react-dom": "^16.2.0",
     "react-fela": "7.3.0",
     "react-helmet": "^5.2.0",
