--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sample-stack",
   "private": true,
-  "version": "0.3.6",
+  "version": "0.4.0",
   "scripts": {
     "jest": "./node_modules/.bin/jest",
     "compile": "lerna exec -- npm run compile",
@@ -233,26 +233,27 @@
   "dependencies": {
     "@cdm-logger/client": "^5.0.4",
     "@cdm-logger/server": "^5.0.4",
-    "@common-stack/client-core": "0.0.151",
-    "@common-stack/client-react": "0.0.151",
-    "@common-stack/client-redux": "0.0.151",
-    "@common-stack/core": "0.0.151",
-    "@common-stack/server-core": "0.0.151",
-    "@common-stack/store-mongo": "0.0.151",
+    "@common-stack/client-core": "0.0.181",
+    "@common-stack/client-react": "0.0.181",
+    "@common-stack/client-redux": "0.0.181",
+    "@common-stack/components": "0.0.181",
+    "@common-stack/core": "0.0.181",
+    "@common-stack/server-core": "0.0.181",
+    "@common-stack/store-mongo": "0.0.181",
     "apollo-cache": "^1.1.9",
     "apollo-cache-inmemory": "^1.2.2",
     "apollo-client": "^2.3.5",
     "apollo-engine": "^1.1.1",
     "apollo-fetch": "^0.7.0",
     "apollo-fetch-upload": "^1.2.0",
-    "apollo-link": "^1.2.2",
-    "apollo-link-batch-http": "^1.2.2",
-    "apollo-link-context": "^1.0.8",
+    "apollo-link": "^1.2.3",
+    "apollo-link-batch-http": "^1.2.3",
+    "apollo-link-context": "^1.0.9",
     "apollo-link-debounce": "^2.0.0",
-    "apollo-link-error": "^1.0.9",
-    "apollo-link-http": "^1.5.4",
-    "apollo-link-retry": "^2.2.3",
-    "apollo-link-state": "^0.4.1",
+    "apollo-link-error": "^1.1.1",
+    "apollo-link-http": "^1.5.5",
+    "apollo-link-retry": "^2.2.5",
+    "apollo-link-state": "^0.4.2",
     "apollo-link-ws": "^1.0.8",
     "apollo-logger": "^0.3.0",
     "apollo-server-express": "^1.3.6",
@@ -307,7 +308,7 @@
     "ramda": "^0.25.0",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.4.2",
     "react-fela": "7.3.0",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.2.0",
