--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -54,8 +54,8 @@
 	"homepage": "https://github.com/cdmbase/fullstack-pro#readme",
 	"dependencies": {
 		"@cdm-logger/server": "^5.0.4",
-		"@common-stack/core": "0.0.151",
-		"@common-stack/server-core": "0.0.151",
+		"@common-stack/core": "0.0.181",
+		"@common-stack/server-core": "0.0.181",
 		"@sample-stack/core": "*",
 		"@sample-stack/graphql-gql": "*",
 		"@sample-stack/graphql-schema": "*",
@@ -64,7 +64,7 @@
 		"@sample-stack/microservice-nats": "*",
 		"@sample-stack/utils": "*",
 		"@sample-stack/counter": "*",
-		"apollo-link": "^1.2.2",
+		"apollo-link": "^1.2.3",
 		"apollo-logger": "^0.3.0",
 		"app-root-path": "^2.0.1",
 		"body-parser": "^1.18.3",
@@ -72,11 +72,11 @@
 		"dotenv": "^5.0.0",
 		"envalid": "^4.1.4",
 		"express": "^4.16.3",
-		"graphql": "^0.12.0",
+		"graphql": "^0.13.2",
 		"graphql-nats-subscriptions": "^1.2.0",
-		"apollo-server-express": "^1.3.6",
+		"apollo-server-express": "^2.0.7",
 		"graphql-subscriptions": "^0.5.8",
-		"graphql-tools": "3.1.1",
+		"graphql-tools": "^3.1.1",
 		"inversify": "^4.13.0",
 		"isomorphic-fetch": "^2.2.1",
 		"knex": "^0.14.4",
@@ -85,7 +85,6 @@
 		"mysql": "^2.15.0",
 		"nats": "^0.8.4",
 		"nats-hemera": "^3.5.1",
-		"persistgraphql": "^0.3.11",
 		"reflect-metadata": "^0.1.12",
 		"sqlite3": "^3.1.13",
 		"subscriptions-transport-ws": "^0.9.9",
@@ -95,10 +94,10 @@
 		"cross-env": "^5.1.3",
 		"spinjs": "0.4.159",
 		"ts-node": "^6.0.0",
-		"typescript": "2.8.3",
+		"typescript": "3.1.3",
 		"jest": "^22.4.2",
 		"rimraf": "^2.6.1",
-		"webpack": "^4.7.0"
+		"webpack": "^4.19.0"
 	},
 	"typings": "dist/main.d.ts",
 	"typescript": {
