--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "lerna": "lerna bootstrap --hoist",
     "postinstall": "npm run lerna",
     "clean": "lerna clean",
-    "start": "npm run spin:watch",
-    "start:envSSR": "cross-env SSR=true npm run spin:watch",
+    "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run spin:watch",
+    "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run spin:watch",
     "start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env spin watch",
     "spin:build": "cross-env NODE_ENV=production spin build",
-    "spin:watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env spin watch",
+    "spin:watch": "spin watch",
     "spin:watch:debug": "npm run spin:watch -- -v",
     "spin:exp": "spin exp",
     "watch": "lerna exec --no-sort --ignore *server --stream --parallel -- webpack --watch",
@@ -100,8 +100,9 @@
     "@types/jest": "^22.2.0",
     "@types/knex": "^0.14.5",
     "@types/minimist": "^1.2.0",
+    "@types/mongoose": "^5.0.15",
     "@types/nats-hemera": "^2.0.0",
-    "@types/node": "^8.10.0",
+    "@types/node": "8.10.1",
     "@types/prop-types": "^15.5.5",
     "@types/react": "^16.4.10",
     "@types/react-addons-test-utils": "^0.14.18",
@@ -116,10 +117,11 @@
     "@types/webpack": "^3.8.4",
     "@types/webpack-env": "^1.13.5",
     "@types/zen-observable": "^0.5.3",
+    "apollo": "^1.9.2",
     "apollo-codegen": "^0.20.2",
     "apollo-test-utils": "^0.3.2",
     "autoprefixer": "^8.4.1",
-    "awesome-typescript-loader": "^5.0.0",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
@@ -147,7 +149,6 @@
     "freeport-async": "^1.1.1",
     "fs-extra": "^4.0.2",
     "graphql-code-generator": "^0.8.21",
-    "haul": "1.0.0-beta.13",
     "hemera-testsuite": "^2.0.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -206,12 +207,12 @@
     "style-loader": "^0.21.0",
     "tcomb": "^3.2.24",
     "ts-jest": "^22.4.5",
-    "ts-loader": "^4.2.0",
+    "ts-loader": "^4.5.0",
     "ts-node": "^6.0.0",
     "tslint": "^5.0.0",
     "tslint-loader": "^3.6.0",
     "tslint-react": "^3.0.0",
-    "typescript": "2.8.3",
+    "typescript": "3.1.3",
     "uglify-es": "^3.3.9",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1",
@@ -240,10 +241,11 @@
     "@common-stack/core": "0.0.181",
     "@common-stack/server-core": "0.0.181",
     "@common-stack/store-mongo": "0.0.181",
-    "apollo-cache": "^1.1.9",
-    "apollo-cache-inmemory": "^1.2.2",
-    "apollo-client": "^2.3.5",
-    "apollo-engine": "^1.1.1",
+    "apollo-cache": "^1.1.17",
+    "apollo-cache-inmemory": "^1.2.10",
+    "apollo-client": "^2.4.2",
+    "apollo-engine": "^1.1.2",
+    "apollo-errors": "^1.9.0",
     "apollo-fetch": "^0.7.0",
     "apollo-fetch-upload": "^1.2.0",
     "apollo-link": "^1.2.3",
@@ -252,12 +254,12 @@
     "apollo-link-debounce": "^2.0.0",
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
+    "apollo-link-logger": "^1.2.3",
     "apollo-link-retry": "^2.2.5",
     "apollo-link-state": "^0.4.2",
     "apollo-link-ws": "^1.0.8",
-    "apollo-logger": "^0.3.0",
-    "apollo-server-express": "^1.3.6",
-    "apollo-upload-server": "^5.0.0",
+    "apollo-logger": "^0.1.1",
+    "apollo-server-express": "^2.0.7",
     "app-root-path": "^2.0.1",
     "body-parser": "^1.18.3",
     "browser-bunyan": "^1.3.0",
@@ -303,7 +305,6 @@
     "nats-hemera": "^3.5.1",
     "nconf": "^0.10.0",
     "node-pre-gyp": "^0.9.0",
-    "persistgraphql": "^0.3.11",
     "prop-types": "^15.6.1",
     "ramda": "^0.25.0",
     "react": "^16.4.2",
