--- a/packages/sample-graphql-client/package.json
+++ b/packages/sample-graphql-client/package.json
@@ -15,9 +15,7 @@
     "build:lib": "webpack",
     "build:lib:watch": "npm run build:lib -- --watch",
     "schema:download": "./node_modules/.bin/apollo-codegen download-schema http://localhost:8080/graphql --output schema.json",
-    "schema:generate": "./node_modules/.bin/apollo-codegen generate src/**/*.graphql --schema schema.json --target typescript --output src/schema.ts",
-    "persistgraphql": "persistgraphql src/ --add_typename",
-    "extractqueries": "persistgraphql src/ --js --extension=ts"
+    "schema:generate": "./node_modules/.bin/apollo-codegen generate src/**/*.graphql --schema schema.json --target typescript --output src/schema.ts"
   },
   "publishConfig": {
     "access": "public"
@@ -44,12 +42,11 @@
   "author": "CDMBase LLC",
   "license": "ISC",
   "devDependencies": {
-    "apollo-codegen": "^0.19.0",
+    "apollo-codegen": "^0.20.2",
     "cross-env": "^5.1.3",
     "jest": "^22.4.2",
-    "persistgraphql": "^0.3.11",
     "rimraf": "^2.6.1",
-    "webpack": "^4.7.0"
+    "webpack": "^4.19.0"
   },
   "dependencies": {},
   "typings": "lib/index.d.ts",
