--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -45,16 +45,16 @@
 		"rimraf": "^2.6.1",
 		"spinjs": "0.4.159",
 		"tslib": "^1.9.0",
-		"webpack": "^4.7.0"
+		"webpack": "^4.19.0"
 	},
 	"dependencies": {
 		"@cdm-logger/client": "^5.0.4",
 		"@cdm-logger/server": "^5.0.4",
-		"@common-stack/client-core": "0.0.151",
-		"@common-stack/client-react": "0.0.151",
-		"@common-stack/client-redux": "0.0.151",
-		"@common-stack/core": "0.0.151",
-		"@common-stack/server-core": "0.0.151",
+		"@common-stack/client-core": "0.0.181",
+		"@common-stack/client-react": "0.0.181",
+		"@common-stack/client-redux": "0.0.181",
+		"@common-stack/core": "0.0.181",
+		"@common-stack/server-core": "0.0.181",
 		"@sample-stack/core": "*",
 		"@sample-stack/client-core": "*",
 		"@sample-stack/client-react": "*",
@@ -62,17 +62,18 @@
 		"@sample-stack/graphql-gql": "*",
 		"@sample-stack/utils": "*",
 		"@sample-stack/counter": "*",
-		"apollo-cache-inmemory": "^1.2.2",
-		"apollo-client": "^2.3.5",
+		"apollo-cache-inmemory": "^1.2.10",
+		"apollo-client": "^2.4.2",
 		"apollo-fetch": "^0.7.0",
-		"apollo-link": "^1.2.2",
-		"apollo-link-batch-http": "^1.2.2",
-		"apollo-link-context": "^1.0.8",
+		"apollo-link": "^1.2.3",
+		"apollo-link-batch-http": "^1.2.3",
+		"apollo-link-context": "^1.0.9",
 		"apollo-link-debounce": "^2.0.0",
-		"apollo-link-error": "^1.0.9",
-		"apollo-link-http": "^1.5.4",
-		"apollo-link-retry": "^2.2.3",
-		"apollo-link-state": "^0.4.1",
+		"apollo-link-error": "^1.1.1",
+		"apollo-link-http": "^1.5.5",
+		"apollo-link-logger": "^1.2.3",
+		"apollo-link-retry": "^2.2.5",
+		"apollo-link-state": "^0.4.2",
 		"apollo-link-ws": "^1.0.8",
 		"apollo-logger": "^0.3.0",
 		"browser-bunyan": "^1.3.0",
@@ -92,17 +93,16 @@
 		"fela-plugin-prefixer": "^5.0.19",
 		"fela-plugin-unit": "^5.0.17",
 		"fela-plugin-validator": "^5.2.0",
-		"graphql": "^0.12.0",
+		"graphql": "^0.13.2",
 		"immutability-helper": "^2.6.6",
 		"inversify": "^4.13.0",
 		"isomorphic-fetch": "^2.2.1",
 		"js-cookie": "^2.2.0",
 		"lodash": "^4.17.10",
-		"persistgraphql": "^0.3.11",
 		"ramda": "^0.25.0",
 		"react": "^16.4.2",
-		"react-apollo": "^2.1.8",
-		"react-dom": "^16.2.0",
+        "react-apollo": "^2.1.11",
+		"react-dom": "^16.4.2",
 		"react-fela": "7.3.0",
 		"react-helmet": "^5.2.0",
 		"react-loadable": "^5.4.0",
