--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -93,6 +93,7 @@
 		"fela-plugin-prefixer": "^5.0.19",
 		"fela-plugin-unit": "^5.0.17",
 		"fela-plugin-validator": "^5.2.0",
+		"fela-preset-web": "^8.0.8",
 		"graphql": "^0.13.2",
 		"immutability-helper": "^2.6.6",
 		"inversify": "^4.13.0",
