--- a/tools/templates/module/server/package.json
+++ b/tools/templates/module/server/package.json
@@ -37,7 +37,7 @@
     "author": "CDMBase LLC",
     "license": "ISC",
     "devDependencies": {
-        "apollo-codegen": "^0.20.2",
+        "apollo": "^2.0.11",
         "cross-env": "^5.1.3",
         "jest": "^22.4.2",
         "rimraf": "^2.6.1",
