--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -13,7 +13,7 @@
 		"build": "cross-env NODE_ENV=production spin build",
 		"build:debug": "cross-env DEBUGGING=true NODE_ENV=production spin build",
 		"build:debug:verbose": "npm run build:debug -- -v",
-		"start": "node --harmony dist",
+		"start": "cross-env NODE_ENV=production pm2-runtime  dist/index.js",
 		"start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env node --harmony dist",
 		"start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env node --harmony dist",
 		"watch": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env spin watch",
@@ -42,6 +42,7 @@
 		"enzyme-adapter-react-16": "^1.1.1",
 		"express": "^4.16.3",
 		"jest": "^22.4.2",
+		"pm2": "^3.2.2",
 		"rimraf": "^2.6.1",
 		"spinjs": "0.4.159",
 		"tslib": "^1.9.0",
@@ -108,6 +109,7 @@
 		"react-fela": "7.3.0",
 		"react-helmet": "^5.2.0",
 		"react-loadable": "^5.4.0",
+		"redux-logger": "^3.0.6",
 		"react-redux": "^5.0.7",
 		"react-redux-typescript": "^2.3.0",
 		"react-resizable": "^1.7.5",
