--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -8,7 +8,7 @@
 		"prepublish": "npm run build:clean",
 		"build:clean": "rimraf dist",
 		"build": "cross-env NODE_ENV=production spin build",
-		"start": "node --harmony dist",
+		"start": "cross-env NODE_ENV=production pm2-runtime  dist/index.js",
 		"start:test": "cross-env NODE_ENV=test ENV_FILE=../../config/test/test.env node --harmony dist",
 		"start:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env node --harmony dist",
 		"watch": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env spin watch",
@@ -107,6 +107,7 @@
 		"ts-node": "^6.0.0",
 		"typescript": "3.1.3",
 		"jest": "^22.4.2",
+		"pm2": "^3.2.2",
 		"rimraf": "^2.6.1",
 		"webpack": "^4.19.0"
 	},
