--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "postdevpublish": "git checkout develop",
     "devpublish:force": "npm run devpublish -- --force-publish=*",
     "lerna": "lerna bootstrap --hoist",
-    "postinstall": "npm run lerna",
     "clean": "lerna clean",
     "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run spin:watch",
     "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run spin:watch",
@@ -30,7 +29,6 @@
     "build": "npm run build:packages",
     "build:packages": "lerna run build --ignore *server",
     "build:packages:watch": "lerna run build:lib:watch --ignore *server --stream",
-    "prebootstrap": "npm install",
     "db:migrate": "knex migrate:latest --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./servers/backend-server/knexfile.js",
     "db:seed": "npm run db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.js",
@@ -90,6 +88,8 @@
     "servers/*"
   ],
   "devDependencies": {
+    "@sample-stack/graphql-schema": "*",
+    "@sample-stack/utils": "*",
     "@types/async": "^2.0.40",
     "@types/body-parser": "1.16.5",
     "@types/bunyan": "^1.8.0",
@@ -130,6 +130,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.0",
+    "body-parser": "^1.18.3",
     "caporal": "^0.10.0",
     "concurrently": "^3.5.0",
     "connect": "^3.6.5",
@@ -164,7 +165,7 @@
     "jest-transform-graphql": "^2.1.0",
     "jsdom": "^11.6.0",
     "json-loader": "^0.5.7",
-    "lerna": "2.11.0",
+    "lerna": "3.8.0",
     "lint-staged": "^6.1.0",
     "lodash": "^4.17.10",
     "mime": "^2.3.0",
@@ -210,6 +211,7 @@
     "ts-jest": "^22.4.5",
     "ts-loader": "^4.5.0",
     "ts-node": "^6.0.0",
+    "tslib": "^1.9.0",
     "tslint": "^5.0.0",
     "tslint-loader": "^3.6.0",
     "tslint-react": "^3.0.0",
@@ -233,104 +235,21 @@
     "ws": "^3.3.3"
   },
   "dependencies": {
-    "@cdm-logger/client": "^5.0.4",
-    "@cdm-logger/server": "^5.0.4",
-    "@common-stack/client-core": "0.0.187",
-    "@common-stack/client-react": "0.0.187",
-    "@common-stack/client-redux": "0.0.187",
-    "@common-stack/components": "0.0.187",
-    "@common-stack/core": "0.0.187",
-    "@common-stack/server-core": "0.0.187",
-    "@common-stack/store-mongo": "0.0.187",
-    "apollo-cache": "^1.1.17",
-    "apollo-cache-inmemory": "^1.2.10",
-    "apollo-client": "^2.4.2",
-    "apollo-errors": "^1.9.0",
-    "apollo-fetch": "^0.7.0",
-    "apollo-fetch-upload": "^1.2.0",
-    "apollo-link": "^1.2.3",
-    "apollo-link-batch-http": "^1.2.3",
-    "apollo-link-context": "^1.0.9",
-    "apollo-link-debounce": "^2.0.0",
-    "apollo-link-error": "^1.1.1",
-    "apollo-link-http": "^1.5.5",
-    "apollo-link-logger": "^1.2.3",
-    "apollo-link-retry": "^2.2.5",
-    "apollo-link-state": "^0.4.2",
-    "apollo-link-ws": "^1.0.8",
-    "apollo-logger": "^0.3.0",
-    "apollo-server-express": "^2.2.0",
-    "app-root-path": "^2.0.1",
-    "body-parser": "^1.18.3",
-    "browser-bunyan": "^1.3.0",
-    "bunyan": "^1.8.12",
-    "classnames": "^2.2.5",
-    "cors": "^2.8.4",
-    "dotenv": "^5.0.0",
-    "error-stack-parser": "^2.0.1",
-    "export-dir": "^0.1.2",
-    "fela": "6.1.8",
-    "fela-beautifier": "^5.0.15",
-    "fela-dom": "7.0.8",
-    "fela-font-renderer": "^5.0.10",
-    "fela-perf": "^5.0.3",
-    "fela-plugin-fallback-value": "^5.0.18",
-    "fela-plugin-logger": "^5.0.5",
-    "fela-plugin-lvha": "^5.0.15",
-    "fela-plugin-prefixer": "^5.0.19",
-    "fela-plugin-unit": "^5.0.17",
-    "fela-plugin-validator": "^5.2.0",
-    "fela-preset-web": "^8.0.8",
-    "graphql": "^0.13.2",
-    "graphql-iso-date": "^3.6.1",
-    "graphql-subscriptions": "^1.0.0",
-    "graphql-nats-subscriptions": "^1.3.0",
-    "graphql-playground-middleware-express": "^1.7.3",
-    "graphql-tools": "^4.0.3",
-    "helmet": "^3.12.0",
-    "hemera-joi": "^3.1.0",
-    "hemera-plugin": "0.1.2",
-    "hemera-safe-promises": "^0.0.2",
-    "hemera-sql-store": "^4.0.0",
-    "hemera-zipkin": "^3.1.0",
-    "history": "^4.7.2",
-    "immutability-helper": "^2.6.6",
-    "inversify": "^4.13.0",
-    "isomorphic-fetch": "^2.2.1",
-    "js-cookie": "^2.2.0",
-    "knex": "^0.14.4",
-    "nats": "^0.8.4",
-    "nats-hemera": "^3.5.1",
-    "nconf": "^0.10.0",
-    "node-pre-gyp": "^0.9.0",
-    "prop-types": "^15.6.1",
-    "ramda": "^0.25.0",
-    "react": "^16.4.2",
-    "react-apollo": "^2.1.11",
-    "react-dom": "^16.4.2",
-    "react-fela": "7.3.0",
-    "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.2.0",
-    "react-loadable": "^5.4.0",
-    "react-redux": "^5.0.7",
-    "react-resizable": "^1.7.5",
-    "react-router": "^4.3.1",
-    "react-router-config": "^1.0.0-beta.4",
-    "react-router-dom": "^4.3.1",
-    "react-router-redux": "^5.0.0-alpha.8",
-    "react-transition-group": "^2.3.1",
-    "recompose": "^0.27.1",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "reflect-metadata": "^0.1.12",
-    "reselect": "^3.0.1",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.3.3",
-    "sequelize": "^4.37.10",
-    "serialize-javascript": "^1.5.0",
-    "sourcemapped-stacktrace": "^1.1.8",
-    "sqlite3": "^3.1.13",
-    "subscriptions-transport-ws": "^0.9.15",
-    "universal-cookie-express": "^3.0.4"
+    "@sample-stack/client-core": "file:packages/sample-client-core",
+    "@sample-stack/client-react": "file:packages/sample-client-react",
+    "@sample-stack/client-redux": "file:packages/sample-client-redux",
+    "@sample-stack/core": "file:packages/sample-core",
+    "@sample-stack/counter": "file:packages-modules/counter",
+    "@sample-stack/graphql-gql": "file:packages/sample-graphql-client",
+    "@sample-stack/graphql-schema": "file:packages/sample-graphql-schema",
+    "@sample-stack/hemera-plugin": "file:packages/sample-hemera-plugin",
+    "@sample-stack/microservice-nats": "file:packages/sample-microservice-nats",
+    "@sample-stack/sample-module": "file:packages-modules/sample-module",
+    "@sample-stack/server-core": "file:packages/sample-server-core",
+    "@sample-stack/store": "file:packages/sample-store",
+    "@sample-stack/utils": "file:packages/sample-utils",
+    "sample-stack-backend-server": "file:servers/backend-server",
+    "sample-stack-frontend-server": "file:servers/frontend-server",
+    "sample-stack-hemera-server": "file:servers/hemera-server"
   }
 }
