--- a/backup/post/package.json
+++ b/backup/post/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sample-stack/graphql-gql",
+  "name": "@sample-stack/ext-post",
   "version": "0.0.1",
   "description": "Sample core for higher packages to depend on",
   "main": "lib/index.js",
@@ -13,9 +13,7 @@
     "build": "npm run build:clean && npm run build:lib",
     "build:clean": "rimraf lib",
     "build:lib": "webpack",
-    "build:lib:watch": "npm run build:lib -- --watch",
-    "schema:download": "./node_modules/.bin/apollo-codegen download-schema http://localhost:8080/graphql --output schema.json",
-    "schema:generate": "./node_modules/.bin/apollo-codegen generate src/**/*.graphql --schema schema.json --target typescript --output src/schema.ts"
+    "build:lib:watch": "npm run build:lib -- --watch"
   },
   "publishConfig": {
     "access": "public"
@@ -41,6 +39,20 @@
   },
   "author": "CDMBase LLC",
   "license": "ISC",
+  "devDependencies": {
+    "cross-env": "^5.1.3",
+    "jest": "^22.4.2",
+    "persistgraphql-webpack-plugin": "^0.5.1",
+    "rimraf": "^2.6.1",
+    "webpack": "^3.11.0"
+  },
+  "dependencies": {
+    "graphql-iso-date": "^3.5.0",
+    "graphql-tag": "^2.8.0",
+    "path": "^0.12.7",
+    "webpack-node-externals": "^1.6.0"
+  },
+  "peerDependencies": {},
   "typings": "lib/index.d.ts",
   "typescript": {
     "definition": "lib/index.d.ts"
