--- a/packages-modules/sample-module/package.json
+++ b/packages-modules/sample-module/package.json
@@ -39,20 +39,13 @@
   },
   "author": "CDMBase LLC",
   "license": "ISC",
-  "devDependencies": {
-    "cross-env": "^5.1.3",
-    "jest": "^22.4.2",
-    "rimraf": "^2.6.1",
-    "webpack": "^4.19.0",
-    "webpack-node-externals": "^1.7.2"
-  },
   "dependencies": {
     "@common-stack/server-core": "0.0.187",
-    "@sample-stack/client-react": "*",
-    "@sample-stack/client-redux": "*",
-    "@sample-stack/graphql-schema": "*",
-    "@sample-stack/server-core": "*",
-    "@sample-stack/microservice-nats": "*"
+    "@sample-stack/client-react": "file:../../packages/sample-client-react",
+    "@sample-stack/client-redux": "file:../../packages/sample-client-redux",
+    "@sample-stack/graphql-schema": "file:../../packages/sample-graphql-schema",
+    "@sample-stack/microservice-nats": "file:../../packages/sample-microservice-nats",
+    "@sample-stack/server-core": "file:../../packages/sample-server-core"
   },
   "peerDependencies": {
     "graphql-tag": ">=2.0.0"
