--- a/packages/sample-client-core/package.json
+++ b/packages/sample-client-core/package.json
@@ -47,13 +47,8 @@
     "url": "https://github.com/cdmbase/fullstack-pro/issues"
   },
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
-  "devDependencies": {
-    "jest": "^22.4.2",
-    "rimraf": "^2.6.1",
-    "webpack": "^4.19.0"
-  },
   "dependencies": {
-    "@sample-stack/core": "*"
+    "@sample-stack/core": "file:../sample-core"
   },
   "typings": "lib/index.d.ts",
   "typescript": {
