--- a/packages/sample-client-react/package.json
+++ b/packages/sample-client-react/package.json
@@ -56,16 +56,13 @@
     "redux": ">=3.6.0"
   },
   "dependencies": {
-    "@sample-stack/core": "*",
-    "@sample-stack/client-core": "*",
-    "@sample-stack/client-redux": "*",
-    "@sample-stack/graphql-gql": "*"
+    "@sample-stack/client-core": "file:../sample-client-core",
+    "@sample-stack/client-redux": "file:../sample-client-redux",
+    "@sample-stack/core": "file:../sample-core",
+    "@sample-stack/graphql-gql": "file:../sample-graphql-client"
   },
   "devDependencies": {
-    "@sample-stack/graphql-schema": "*",
-    "jest": "^22.4.2",
-    "rimraf": "^2.6.1",
-    "webpack": "^4.19.0"
+    "@sample-stack/graphql-schema": "file:../sample-graphql-schema"
   },
   "typings": "lib/index.d.ts",
   "typescript": {
