--- a/packages/sample-graphql-schema/package.json
+++ b/packages/sample-graphql-schema/package.json
@@ -4,67 +4,63 @@
 	"description": "Sample Schema Module",
 	"main": "lib/index.js",
 	"publishConfig": {
-	  "access": "public"
+		"access": "public"
 	},
 	"scripts": {
-	  "jest": "./node_modules/.bin/jest",
-	  "test": "cross-env ENV_FILE=../../config/test/test.env jest",
-	  "test:debug": "npm test -- --runInBand",
-	  "test:watch": "npm test -- --watch",
-	  "prepublish": "npm run build",
-	  "watch": "npm run build:lib:watch",
-	  "build": "npm run build:clean && npm run build:lib",
-	  "build:clean": "rimraf lib",
-	  "build:lib": "webpack",
-	  "build:lib:watch": "npm run build:lib -- --watch"
+		"jest": "./node_modules/.bin/jest",
+		"test": "cross-env ENV_FILE=../../config/test/test.env jest",
+		"test:debug": "npm test -- --runInBand",
+		"test:watch": "npm test -- --watch",
+		"prepublish": "npm run build",
+		"watch": "npm run build:lib:watch",
+		"build": "npm run build:clean && npm run build:lib",
+		"build:clean": "rimraf lib",
+		"build:lib": "webpack",
+		"build:lib:watch": "npm run build:lib -- --watch"
 	},
 	"jest": {
-	  "testEnvironment": "node",
-	  "roots": [
-		"src",
-		"lib"
-	  ],
-	  "modulePaths": [
-		"node_modules"
-	  ],
-	  "moduleFileExtensions": [
-		"ts",
-		"tsx",
-		"js",
-		"json"
-	  ],
-	  "transform": {
-		"\\.(ts|tsx)$": "<rootDir>/../../node_modules/ts-jest/preprocessor.js"
-	  },
-	  "testRegex": ".*test*\\.(ts|tsx|js)$"
+		"testEnvironment": "node",
+		"roots": [
+			"src",
+			"lib"
+		],
+		"modulePaths": [
+			"node_modules"
+		],
+		"moduleFileExtensions": [
+			"ts",
+			"tsx",
+			"js",
+			"json"
+		],
+		"transform": {
+			"\\.(ts|tsx)$": "<rootDir>/../../node_modules/ts-jest/preprocessor.js"
+		},
+		"testRegex": ".*test*\\.(ts|tsx|js)$"
 	},
 	"repository": {
-	  "type": "git",
-	  "url": "https://github.com/js-accounts/accounts/tree/master/packages/server"
+		"type": "git",
+		"url": "https://github.com/js-accounts/accounts/tree/master/packages/server"
 	},
 	"author": "CDMBase LLC",
 	"license": "MIT",
 	"dependencies": {
-	  "@sample-stack/core": "*",
-	  "@sample-stack/server-core": "*"
+		"@sample-stack/core": "file:../sample-core",
+		"@sample-stack/server-core": "file:../sample-server-core"
 	},
 	"devDependencies": {
-	  "@sample-stack/utils": "*",
-	  "cross-env": "^5.1.3",
-	  "jest": "^22.4.2",
-	  "rimraf": "^2.6.1",
-	  "webpack": "^4.19.0"
+		"@sample-stack/utils": "file:../sample-utils"
 	},
 	"peerDependencies": {
-	  "lodash": "^4.17.10",
-	  "graphql-tools": ">2.0.0",
-	  "graphql": "^0.10.0 || ^0.11.0"
+		"graphql": "^0.10.0 || ^0.11.0",
+		"graphql-tools": ">2.0.0",
+		"lodash": "^4.17.10"
 	},
 	"optionalDependencies": {
-	  "@types/graphql": "^0.11.3"
+		"@types/graphql": "^0.11.3"
 	},
 	"typings": "lib/index.d.ts",
 	"typescript": {
-	  "definition": "lib/index.d.ts"
+		"definition": "lib/index.d.ts"
 	}
-  }
+}
