--- a/packages/sample-server-core/package.json
+++ b/packages/sample-server-core/package.json
@@ -48,14 +48,10 @@
   },
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "devDependencies": {
-    "cross-env": "^5.1.3",
-    "@sample-stack/utils": "*",
-    "jest": "^22.4.2",
-    "rimraf": "^2.6.1",
-    "webpack": "^4.19.0"
+    "@sample-stack/utils": "file:../sample-utils"
   },
   "dependencies": {
-    "@sample-stack/core": "*"
+    "@sample-stack/core": "file:../sample-core"
   },
   "typings": "lib/index.d.ts",
   "typescript": {
