--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -56,14 +56,14 @@
 		"@cdm-logger/server": "^5.0.4",
 		"@common-stack/core": "0.0.187",
 		"@common-stack/server-core": "0.0.187",
-		"@sample-stack/core": "*",
-		"@sample-stack/graphql-gql": "*",
-		"@sample-stack/graphql-schema": "*",
-		"@sample-stack/server-core": "*",
-		"@sample-stack/store": "*",
-		"@sample-stack/microservice-nats": "*",
-		"@sample-stack/utils": "*",
-		"@sample-stack/counter": "*",
+		"@sample-stack/core": "file:../../packages/sample-core",
+		"@sample-stack/counter": "file:../../packages-modules/counter",
+		"@sample-stack/graphql-gql": "file:../../packages/sample-graphql-client",
+		"@sample-stack/graphql-schema": "file:../../packages/sample-graphql-schema",
+		"@sample-stack/microservice-nats": "file:../../packages/sample-microservice-nats",
+		"@sample-stack/server-core": "file:../../packages/sample-server-core",
+		"@sample-stack/store": "file:../../packages/sample-store",
+		"@sample-stack/utils": "file:../../packages/sample-utils",
 		"apollo-datasource-rest": "^2.0.0-rc.8",
 		"apollo-errors": "^1.9.0",
 		"apollo-link": "^1.2.3",
@@ -73,6 +73,7 @@
 		"apollo-link-http": "^1.5.5",
 		"apollo-link-ws": "^1.0.8",
 		"apollo-logger": "^0.3.0",
+		"apollo-server-express": "^2.2.0",
 		"app-root-path": "^2.0.1",
 		"body-parser": "^1.18.3",
 		"cors": "^2.8.4",
@@ -82,7 +83,6 @@
 		"graphql": "^0.13.2",
 		"graphql-nats-subscriptions": "^1.3.0",
 		"graphql-subscriptions": "^1.0.0",
-		"apollo-server-express": "^2.2.0",
 		"graphql-tools": "^4.0.3",
 		"hemera-plugin": "0.1.2",
 		"inversify": "^4.13.0",
@@ -96,20 +96,9 @@
 		"reflect-metadata": "^0.1.12",
 		"rxjs": "^6.3.3",
 		"rxjs-compat": "^6.3.3",
-		"sqlite3": "^3.1.13",
 		"subscriptions-transport-ws": "^0.9.15",
 		"universal-cookie-express": "^3.0.4",
 		"ws": "^3.3.3"
-	},
-	"devDependencies": {
-		"cross-env": "^5.1.3",
-		"spinjs": "0.4.159",
-		"ts-node": "^6.0.0",
-		"typescript": "3.1.3",
-		"jest": "^22.4.2",
-		"pm2": "^3.2.2",
-		"rimraf": "^2.6.1",
-		"webpack": "^4.19.0"
 	},
 	"typings": "dist/main.d.ts",
 	"typescript": {
