--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -35,19 +35,6 @@
 		"url": "https://github.com/cdmbase/fullstack-pro/issues"
 	},
 	"homepage": "https://github.com/cdmbase/fullstack-pro#readme",
-	"devDependencies": {
-		"body-parser": "^1.18.3",
-		"cross-env": "^5.1.3",
-		"enzyme": "^3.3.0",
-		"enzyme-adapter-react-16": "^1.1.1",
-		"express": "^4.16.3",
-		"jest": "^22.4.2",
-		"pm2": "^3.2.2",
-		"rimraf": "^2.6.1",
-		"spinjs": "0.4.159",
-		"tslib": "^1.9.0",
-		"webpack": "^4.19.0"
-	},
 	"dependencies": {
 		"@cdm-logger/client": "^5.0.4",
 		"@cdm-logger/server": "^5.0.4",
@@ -56,13 +43,13 @@
 		"@common-stack/client-redux": "0.0.187",
 		"@common-stack/core": "0.0.187",
 		"@common-stack/server-core": "0.0.187",
-		"@sample-stack/core": "*",
-		"@sample-stack/client-core": "*",
-		"@sample-stack/client-react": "*",
-		"@sample-stack/client-redux": "*",
-		"@sample-stack/graphql-gql": "*",
-		"@sample-stack/utils": "*",
-		"@sample-stack/counter": "*",
+		"@sample-stack/client-core": "file:../../packages/sample-client-core",
+		"@sample-stack/client-react": "file:../../packages/sample-client-react",
+		"@sample-stack/client-redux": "file:../../packages/sample-client-redux",
+		"@sample-stack/core": "file:../../packages/sample-core",
+		"@sample-stack/counter": "file:../../packages-modules/counter",
+		"@sample-stack/graphql-gql": "file:../../packages/sample-graphql-client",
+		"@sample-stack/utils": "file:../../packages/sample-utils",
 		"apollo-cache-inmemory": "^1.2.10",
 		"apollo-client": "^2.4.2",
 		"apollo-fetch": "^0.7.0",
@@ -83,6 +70,7 @@
 		"cors": "^2.8.4",
 		"dotenv": "^5.0.0",
 		"envalid": "^4.1.4",
+		"error-stack-parser": "^2.0.1",
 		"fela": "6.1.8",
 		"fela-beautifier": "^5.0.15",
 		"fela-dom": "7.0.8",
@@ -104,12 +92,11 @@
 		"lodash": "^4.17.10",
 		"ramda": "^0.25.0",
 		"react": "^16.4.2",
-        "react-apollo": "^2.1.11",
+		"react-apollo": "^2.1.11",
 		"react-dom": "^16.4.2",
 		"react-fela": "7.3.0",
 		"react-helmet": "^5.2.0",
 		"react-loadable": "^5.4.0",
-		"redux-logger": "^3.0.6",
 		"react-redux": "^5.0.7",
 		"react-redux-typescript": "^2.3.0",
 		"react-resizable": "^1.7.5",
@@ -120,6 +107,7 @@
 		"react-transition-group": "^2.3.1",
 		"recompose": "^0.27.1",
 		"redux": "^4.0.0",
+		"redux-logger": "^3.0.6",
 		"redux-thunk": "^2.3.0",
 		"reselect": "^3.0.1",
 		"serialize-javascript": "^1.5.0",
