--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,12 @@
     "jsx": "react",
     "declaration": true,
     "experimentalDecorators": true,
+    "preserveConstEnums": true,
     "sourceMap": true,
     "noImplicitAny": false,
     "allowSyntheticDefaultImports": false,
     "pretty": true,
-    "removeComments": true,
+    "removeComments": false,
     "lib": [
       "es2017",
       "dom",
