--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "devpublish": "npm run lerna:predevpublish && lerna publish --cd-version=prerelease",
     "postdevpublish": "git checkout develop",
     "devpublish:force": "npm run devpublish -- --force-publish=*",
-    "lerna": "lerna bootstrap --hoist",
+    "lerna": "lerna bootstrap",
     "clean": "lerna clean",
     "start": "cross-env NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run spin:watch",
     "start:envSSR": "cross-env SSR=true NODE_ENV=development ENV_FILE=../../config/development/dev.env npm run spin:watch",
@@ -96,14 +96,14 @@
     "@types/cors": "2.8.1",
     "@types/enzyme": "^2.8.0",
     "@types/express": "^4.0.35",
-    "@types/graphql": "^0.13.4",
+    "@types/graphql": "^14.0.3",
     "@types/isomorphic-fetch": "0.0.34",
     "@types/jest": "^22.2.0",
     "@types/knex": "^0.14.5",
     "@types/minimist": "^1.2.0",
     "@types/mongoose": "^5.0.15",
     "@types/nats-hemera": "^2.0.0",
-    "@types/node": "8.10.1",
+    "@types/node": "10.12.2",
     "@types/prop-types": "^15.5.5",
     "@types/react": "^16.4.10",
     "@types/react-addons-test-utils": "^0.14.18",
